# cognisect

./: .dockerignore  .env.example  .gitignore  LICENSE  NOTICE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20eb6c8c7f3a_task_3_model_telemetry.py  947af2c8d1e4_durable_analysis_attempt_journal.py  a5d3e9b7c421_model_response_identity.py  a61bd8e7c204_invalid_learner_command.py  b69c7b913125_initial_postgres_workflow_schema.py  c5d7e9f1a204_expiry_leading_rate_limit_index.py  e3b1c7d9a205_case_provenance.py  f4c2d8a6b310_rate_limit_windows.py
backend/src/cognisect/: __init__.py  api.py  api_models.py  benchmark.py  body_limit.py  compiler.py  config.py  database.py  db_models.py  evidence.py  interpreter.py  lifecycle_lock.py  migration_policy.py  model_analyzer.py  model_attempts.py  model_policy.py  models.py  offline_evaluation.py  provenance.py  rate_limit.py  receipt.py  repositories.py  safe_logging.py  security.py  services.py  workflow.py  workflow_graph.py
backend/tests/: conftest.py  oracle.py  run_frontend_server.py  test_api.py  test_api_contracts.py  test_benchmark.py  test_compiler.py  test_dependency_licenses.py  test_evaluation_protocol.py  test_evidence.py  test_frontend_harness.py  test_galaxy_migration_lock_timeouts.py  test_langgraph_runtime.py  test_launcher.py  test_migration_policy.py  test_mobile_eas_config.py  test_model_analyzer.py  test_model_benchmark_script.py  test_model_dependencies.py  test_model_identity_migration.py  test_model_persistence.py  test_model_verifier.py  test_models.py  test_offline_evaluation.py  test_openapi.py  test_persistence_contracts.py  test_production_lifespan.py  test_production_stress_script.py  test_prompts_and_routing.py  test_provenance.py  test_rate_limit.py  test_receipt.py  test_registry.py  test_release_artifacts.py  test_release_claims.py  test_task3_api_graph.py  test_telemetry_identity.py  test_workflow_services.py  test_workflow_state.py
data/evaluation/: benchmark-report.v1.json  manifest.v1.json  protocol.v1.json  report.v1.json
data/provenance/: public-cases.v1.json
data/security/: production-stress-report.v1.json  security-audit.v1.json
docs/: ARCHITECTURE.md  BUILD_LOG.md  DATASET_CARD.md  DEPENDENCY_LICENSES.md  DEPLOYMENT.md  EDUCATOR_REVIEW.md  EVALUATION.md  FACT_SHEET.md  SECURITY.md  SUBMISSION_COPY.md
docs/data/: educator-exemplars.md
docs/specs/: data-tiers.md  evidence-contract.md  rule-registry-v1.md  state-machine.md
docs/superpowers/plans/: 2026-07-17-cognisect-galaxy-build.md  2026-07-17-release-evidence-gates.md
docs/superpowers/specs/: 2026-07-17-cognisect-galaxy-design.md
frontend/: e2e-settings.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/scripts/: check-toolchain.mjs  prepare-next-typescript.mjs
frontend/src/: proxy.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: compiler-proof-lens.tsx  counterfactual-preview.tsx  evidence-receipt-button.tsx  evidence-topology.tsx  judge-tour.tsx  lab-form.tsx  learner-qr.tsx  learner-response-form.tsx  probe-decision-form.tsx  report-view.tsx  review-form.tsx  runtime-evidence.tsx  workflow-panel.tsx
frontend/src/lib/: backend-proxy.ts  idempotency.ts  owner-session.ts  public-cases.ts  validation.ts  (+1 more)
frontend/tests/: api-client.test.ts  compiler-proof-lens.test.tsx  evidence-topology.test.tsx  fixtures.ts  forms.test.tsx  learner-qr.test.tsx  owner-session.test.ts  proxy.test.ts  public-cases.test.ts  route-content.test.tsx  toolchain.test.ts
frontend/tools/: typescript-five.cjs
mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
openapi/: openapi.json
schemas/: rule-instance.v1.schema.json  rule-mapping.v1.schema.json
schemas/examples/: rule-mapping.invalid-extra-field.json  rule-mapping.valid.json
scripts/: __init__.py  check_public_repo.py  database_url.sh  generate_dependency_licenses.py  generate_openapi.py  migrate.sh  run-backend.sh  run_model_benchmark.py  run_offline_evaluation.py  run_production_stress.py  setup_checkpoints.py  validate_provenance.py  verify_models.py
(+26 files in other folders)
