[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "cognisect"
version = "0.1.0"
description = "Deterministic signed-integer counterexample compiler"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic==2.13.4",
]

[dependency-groups]
dev = [
  "hypothesis==6.156.6",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/cognisect"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["ANN", "D", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "backend/src"
packages = ["cognisect"]
