[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "cognisect"
version = "0.1.0"
description = "Deterministic signed-integer counterexample compiler"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy[asyncio]==2.0.51",
  "structlog==26.1.0",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "asgi-lifespan==2.1.0",
  "freezegun==1.5.5",
  "hypothesis==6.156.6",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/cognisect"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
markers = [
  "postgres: requires the checked-in Postgres service and never skips",
]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]
extend-exclude = ["backend/alembic"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
  "TC001",
  "TC002",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["ANN", "D", "PLR2004", "S101"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "backend/src"
packages = ["cognisect"]
