[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "cognisect"
version = "0.1.0"
description = "Deterministic signed-integer counterexample compiler"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "langgraph==1.2.9",
  "langgraph-checkpoint-postgres==3.1.0",
  "openai==2.45.0",
  "psycopg[binary,pool]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy[asyncio]==2.0.51",
  "structlog==26.1.0",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "asgi-lifespan==2.1.0",
  "hypothesis==6.156.6",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pyyaml==6.0.3",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/cognisect"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
  "postgres: requires the checked-in Postgres service and never skips",
]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]
extend-exclude = ["backend/alembic"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
  "TC001",
  "TC002",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = [
  "ANN",
  "D",
  "EM101",
  "FBT001",
  "PLC0415",
  "PLR2004",
  "PT018",
  "S101",
  "S608",
  "SLF001",
  "TRY003",
]
"scripts/**" = ["EM101", "S106", "S603", "T201", "TRY003"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "backend/src"
packages = ["cognisect"]
